@@ -19,6 +19,8 @@ package com.google.scp.coordinator.keymanagement.keygeneration.tasks.aws;
 import static com.google.common.collect.ImmutableMap.toImmutableMap;
 import static com.google.common.truth.Truth.assertThat;
 import static com.google.scp.coordinator.keymanagement.keygeneration.tasks.common.CreateSplitKeyTask.KEY_REFRESH_WINDOW;
+import static com.google.scp.coordinator.keymanagement.shared.dao.common.KeyDb.DEFAULT_SET_NAME;
+import static com.google.scp.shared.util.KeyParams.DEFAULT_TINK_TEMPLATE;
 import static org.junit.Assert.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.atLeast;
@@ -86,12 +88,18 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
             .put(FakeKeyStorageClient.KEK_URI, FakeKeyStorageClient.PUBLIC_KEY_VERIFY)
             .build();
 
-    task.createSplitKey(keysToCreate, expectedExpiryInDays, expectedTtlInDays, Instant.now());
+    task.createSplitKey(
+        DEFAULT_SET_NAME,
+        DEFAULT_TINK_TEMPLATE,
+        keysToCreate,
+        expectedExpiryInDays,
+        expectedTtlInDays,
+        Instant.now());
 
     ImmutableList<EncryptionKey> keys = keyDb.getAllKeys();
     assertThat(keys).hasSize(keysToCreate);
 
-    EncryptionKey key = keys.get(0);
+    EncryptionKey key = keys.getFirst();
 
     // Validate that the key split decrypts (currently no associated data)
     keyEncryptionKeyAead.decrypt(
@@ -153,7 +161,13 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
   @Test
   public void createSplitKey_reusesDataKey() throws Exception {
     // Create 5 keys.
-    task.createSplitKey(5, /* expiryInDays */ 10, /* ttlInDays */ 20, Instant.now());
+    task.createSplitKey(
+        DEFAULT_SET_NAME,
+        DEFAULT_TINK_TEMPLATE,
+        5,
+        /* expiryInDays */ 10,
+        /* ttlInDays */ 20,
+        Instant.now());
 
     // Assert 5 keys were created but only 1 data key was fetched.
     verify(keyStorageClient, times(1)).fetchDataKey();
@@ -169,7 +183,9 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
 
     ServiceException ex =
         assertThrows(
-            ServiceException.class, () -> task.createSplitKey(keysToCreate, 10, 20, Instant.now()));
+            ServiceException.class,
+            () -> task.createSplitKey(
+                DEFAULT_SET_NAME, DEFAULT_TINK_TEMPLATE, keysToCreate, 10, 20, Instant.now()));
 
     assertThat(ex).hasCauseThat().isInstanceOf(GeneralSecurityException.class);
     assertThat(ex.getErrorCode()).isEqualTo(Code.INTERNAL);
@@ -191,7 +207,9 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
 
     ServiceException ex =
         assertThrows(
-            ServiceException.class, () -> task.createSplitKey(keysToCreate, 10, 20, Instant.now()));
+            ServiceException.class,
+            () -> task.createSplitKey(
+                DEFAULT_SET_NAME, DEFAULT_TINK_TEMPLATE, keysToCreate, 10, 20, Instant.now()));
 
     assertThat(ex).hasCauseThat().isInstanceOf(KeyStorageServiceException.class);
     ImmutableList<EncryptionKey> keys = keyDb.getAllKeys();
@@ -211,10 +229,10 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
             keyIdFactory,
             aeadSelector,
             logMetricHelper);
-    task.createSplitKey(1, 10, 20, Instant.now());
+    task.createSplitKey(DEFAULT_SET_NAME, DEFAULT_TINK_TEMPLATE, 1, 10, 20, Instant.now());
 
     ImmutableList<EncryptionKey> keys = keyDb.getAllKeys();
-    EncryptionKey key = keys.get(0);
+    EncryptionKey key = keys.getFirst();
 
     ImmutableMap<String, KeySplitData> keySplitDataMap =
         key.getKeySplitDataList().stream()
@@ -232,63 +250,11 @@ public class AwsCreateSplitKeyTaskTestBase extends CreateSplitKeyTaskBaseTest {
   public void createSplitKey_signatureFailure() throws Exception {
     doThrow(new GeneralSecurityException("eep")).when(publicKeySign).sign(any(byte[].class));
     var ex =
-        assertThrows(ServiceException.class, () -> task.createSplitKey(1, 10, 20, Instant.now()));
+        assertThrows(
+            ServiceException.class,
+            () -> task.createSplitKey(
+                DEFAULT_SET_NAME, DEFAULT_TINK_TEMPLATE, 1, 10, 20, Instant.now()));
     assertThat(ex.getCause()).hasMessageThat().contains("eep");
-  }
-
-  /** Tests that invoking replaceExpiringKeys multiple times doesn't create multiple keys. */
-  @Test
-  public void replaceExpiringKeys_duplicate() throws Exception {
-    task.replaceExpiringKeys(
-        /* numDesiredKeys= */ 3, /* validityInDays= */ 2, /* ttlInDays= */ 365);
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(3);
-
-    task.replaceExpiringKeys(
-        /* numDesiredKeys= */ 3, /* validityInDays= */ 2, /* ttlInDays= */ 365);
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(3);
-  }
-
-  @Test
-  public void replaceExpiringKeys_refreshesAllKeys() throws Exception {
-    // Create 5 keys that will expire soon
-    for (var i = 0; i < 5; i++) {
-      insertKeyWithExpiration(Instant.now().plus(Duration.ofHours(20)));
-    }
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(5);
-
-    // All 5 keys should be refreshed.
-    task.replaceExpiringKeys(
-        /* numDesiredKeys= */ 5, /* validityInDays= */ 7, /* ttlInDays= */ 365);
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(10);
-
-    // There are 5 fresh keys so this should be a no-op.
-    task.replaceExpiringKeys(
-        /* numDesiredKeys= */ 5, /* validityInDays= */ 7, /* ttlInDays= */ 365);
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(10);
-  }
-
-  @Test
-  public void replaceExpiringKeys_refreshesSomeKeys() throws Exception {
-    // Create 1 key inside the refresh window and one key outside the refreshWindow
-    insertKeyWithExpiration(Instant.now().plus(Duration.ofHours(1))); // inside
-    insertKeyWithExpiration(Instant.now().plus(Duration.ofDays(5))); // outside
-
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(2);
-
-    task.replaceExpiringKeys(
-        /* numDesiredKeys= */ 2, /* validityInDays= */ 5, /* ttlInDays= */ 365);
-
-    // Only one key is inside the refresh window so only one key should be created.
-    assertThat(keyDb.getAllKeys().size()).isEqualTo(3);
-  }
-
-  protected void insertKeyWithExpiration(Instant expirationTime) throws ServiceException {
-    keyDb.createKey(FakeEncryptionKey.withExpirationTime(expirationTime));
   }
 
   @Override
